feat: add organization ID to groups and update configurations

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,12 +18,12 @@ spring:
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
     properties:
       hibernate:
         format_sql: true
     database: mysql
-    database-platform:
+    database-platform: org.hibernate.dialect.MariaDBDialect
   flyway:
     enabled: true
   devtools:
