--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,9 @@
         <jjwt.version>0.11.5</jjwt.version>
         <modelmapper.version>3.1.0</modelmapper.version>
         <springdoc.version>2.2.0</springdoc.version>
+        <sonar.projectKey>deborafaria01_spring-rest-data-security</sonar.projectKey>
+        <sonar.organization>deborafaria01</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
     <dependencies>
         <!-- Spring Data JPA -->
