--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3.1'
-services:
 
+services:
   maria-db:
     container_name: maria-db
     image: mariadb
@@ -8,16 +8,36 @@ services:
     environment:
       MARIADB_ROOT_PASSWORD: root
       MARIADB_DATABASE: sample
+      MARIADB_USER: testuser
+      MARIADB_PASSWORD: testpassword
       MARIADB_ROOT_HOST: '%'
     ports:
       - 3307:3306
     volumes:
-      -  mariadb_volume:/var/lib/mysql
+      - mariadb_volume:/var/lib/mysql
+    networks:
+      - api-network
+
+  test-db:
+    container_name: test-db
+    image: mariadb
+    restart: always
+    environment:
+      MARIADB_ROOT_PASSWORD: root
+      MARIADB_DATABASE: test_sample
+      MARIADB_USER: testuser
+      MARIADB_PASSWORD: testpassword
+      MARIADB_ROOT_HOST: '%'
+    ports:
+      - 3308:3306
+    volumes:
+      - test_mariadb_volume:/var/lib/mysql
     networks:
       - api-network
 
 volumes:
   mariadb_volume:
+  test_mariadb_volume:
 
 networks:
   api-network:
