--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -1,20 +1,20 @@
 spring:
   datasource:
-    url: jdbc:mariadb://localhost:3308/testdb 
-    username: root
-    password: root
+    url: jdbc:mariadb://localhost:3308/test_sample 
+    username: testuser 
+    password: testpassword 
     driver-class-name: org.mariadb.jdbc.Driver
   jpa:
     hibernate:
-      ddl-auto: create-drop 
-    show-sql: true 
+      ddl-auto: create-drop
+    show-sql: true
   test:
     database:
-      replace: none 
+      replace: none
 logging:
   level:
     org:
       springframework:
-        test: DEBUG 
+        test: DEBUG
 
                        
