--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,17 +26,17 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
-      - name: Install Docker Compose
+      - name: Install Docker Compose (if needed)
         run: |
           sudo apt-get update
           sudo apt-get install -y docker.io
-          sudo curl -L "https://github.com/docker/compose/releases/download/v2.22.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-          sudo chmod +x /usr/local/bin/docker-compose
-          docker-compose --version
+          sudo apt-get install -y docker-compose-plugin
+          docker --version
+          docker compose version
 
       - name: Start Docker container for test-db
         run: |
-          docker-compose -f docker-compose.yml up -d test-db
+          docker compose -f docker-compose.yml up -d test-db
           sleep 10
 
       - name: Validate dependencies
@@ -53,7 +53,7 @@ jobs:
 
       - name: Tear down Docker
         if: always()
-        run: docker-compose -f docker-compose.yml down
+        run: docker compose -f docker-compose.yml down
 
   sonar-analysis:
     needs: unit-test
@@ -108,7 +108,7 @@ jobs:
 
       - name: Start Docker container for test-db
         run: |
-          docker-compose -f docker-compose.yml up -d test-db
+          docker compose -f docker-compose.yml up -d test-db
           sleep 10
 
       - name: Validate dependencies
@@ -122,4 +122,4 @@ jobs:
 
       - name: Tear down Docker
         if: always()
-        run: docker-compose -f docker-compose.yml down
+        run: docker compose -f docker-compose.yml down
