--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,11 +26,8 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
-      - name: Install Docker Compose
+      - name: Check Docker and Docker Compose Versions
         run: |
-          sudo apt-get update
-          sudo apt-get install -y docker.io
-          sudo apt-get install -y docker-compose-plugin || echo "Plugin already installed"
           docker --version
           docker compose version
 
