build: configure SonarCloud binaries in pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -161,6 +161,11 @@
                 <groupId>org.sonarsource.scanner.maven</groupId>
                 <artifactId>sonar-maven-plugin</artifactId>
                 <version>3.9.1.2184</version>
+                <configuration>
+                <property>
+                    <sonar.java.binaries>target/classes</sonar.java.binaries>
+                </property>
+                </configuration>
             </plugin>
         </plugins>
     </build>
