ci: add compile step before SonarCloud analysis

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,6 +72,9 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
+      - name: Compile source code
+        run: mvn compile
+
       - name: Run SonarCloud Analysis
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
