--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -1,12 +1,13 @@
 spring:
-  datasource:
-    url: jdbc:mariadb://localhost:3308/test_sample 
-    username: testuser 
-    password: testpassword 
+  flyway:
+    url: jdbc:mariadb://localhost:3308/test_sample
+    user: testuser
+    password: testpassword
+    schemas: test_sample
     driver-class-name: org.mariadb.jdbc.Driver
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: none
     show-sql: true
   test:
     database:
